--- a/css/styles.css
+++ b/css/styles.css
@@ -384,16 +384,19 @@ summary {
   color: var(--accent-color);
 }
 
-@media screen and (miax-width: 768px) {
+.button__logo {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  padding: 10px 0;
+}
+@media screen and (min-width: 768px) {
   .button__logo {
     display: none;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
   }
 }
 
@@ -406,7 +409,7 @@ summary {
 }
 
 .button__logo.is-open .icon-menu {
-  display: block;
+  display: none;
 }
 
 .icon-cross {
@@ -423,6 +426,13 @@ summary {
   line-height: 1.14;
   text-decoration: none;
 }
+@media screen and (max-width: 767px) {
+  .page-header__list {
+    display: block;
+    padding: 48px 0 302px 40px;
+    text-align: left;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .page-header__item--nav:not(:last-child) {
@@ -431,7 +441,7 @@ summary {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .page-header__item--contact:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -440,6 +450,44 @@ summary {
   .page-header__item--contact:not(:last-child) {
     margin-left: 0;
     margin-right: 50px;
+  }
+}
+
+.position {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media screen and (max-width: 767px) {
+  .page-header__menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: antiquewhite;
+    text-align: center;
+    display: block;
+    z-index: 30;
+  }
+}
+@media screen and (min-width: 768px) {
+  .page-header__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -482,14 +530,12 @@ summary {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .page-header__list--nav {
-    padding-top: 32px;
     margin-left: 88px;
   }
 }
 @media screen and (min-width: 1200px) {
   .page-header__list--nav {
     margin-left: 93px;
-    padding-top: 32px;
   }
 }
 
@@ -506,7 +552,6 @@ summary {
 @media screen and (min-width: 1200px) {
   .page-header__list--contact {
     margin-left: 305px;
-    padding-top: 32px;
   }
 }
 
@@ -515,29 +560,44 @@ summary {
   color: var(--accent-color);
 }
 
-.page-header__link--active::after {
-  display: block;
-  position: absolute;
-  content: "";
-  top: 45px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .page-header__link--active::after {
+    display: block;
+    position: absolute;
+    content: "";
+    top: 45px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (max-width: 767px) {
+  .page-header__icon--mail {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .page-header__icon--mail {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+  }
 }
 
-.page-header__icon--mail {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
+@media screen and (max-width: 767px) {
+  .page-header__icon--tell {
+    display: none;
+  }
 }
-
-.page-header__icon--tell {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
+@media screen and (min-width: 768px) {
+  .page-header__icon--tell {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+  }
 }
 
 .page-header__item {
@@ -1402,7 +1462,12 @@ summary {
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 479px) {
+  .subscription__input {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .subscription__input {
     margin-left: auto;
     margin-right: auto;
@@ -2170,7 +2235,12 @@ summary {
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 479px) {
+  .subscription__input {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .subscription__input {
     margin-left: auto;
     margin-right: auto;
