--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -245,7 +245,10 @@
   color: rgba(255, 255, 255, 0.6);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
-  @media screen and (max-width: 1199px){ 
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 480px) and (max-width: 1199px){ 
     margin-left: auto;
     margin-right: auto;
     width: 450px;
