--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -46,79 +46,9 @@ line-height: 1.17;
   border: none;
   background-color: transparent;
   padding: 10px 0;
+  z-index: 50;
 @media screen and (min-width: 768px) {
   display: none;
-}
-}
-
-
-.button__logo .icon-cross {
-  display: none;
-}
-
-.button__logo.is-open .icon-cross {
-  display: block;
-}
-
-.button__logo.is-open .icon-menu {
-  display: none;
-}
-
-.icon-cross {
-  display: none;
-}
-
-.page-header__list {
-  @media screen and (max-width: 767px) {
-  display: block;
-  padding: 48px 0 302px 40px;
-  text-align: left;
-  }
-  display: flex;
-  font-family: 'Roboto';
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  text-decoration: none;
-}
-
-.page-header__item--nav:not(:last-child) {
-@media screen and (min-width: 768px) {
-  margin-left: 0;
-  margin-right: 50px;
-}
-}
-
-.page-header__item--contact:not(:last-child) {
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  margin-bottom: 10px;
-  }
-  
-@media screen and (min-width: 1200px) {
-  margin-left: 0;
-  margin-right: 50px;
-}
-}
-.position {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.page-header__menu {
-@media screen and (max-width: 767px){
-position: absolute;
-top: 100%;
-left: 0;
-width: 100%;
-background-color: antiquewhite;
-text-align: center;
-display: block;
-z-index: 30;
-}
-@media screen and (min-width: 768px) {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 }
 
@@ -135,20 +65,27 @@ z-index: 30;
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 767px) {
+    font-size: 40px;
+    line-height: 1.175;
+  }
+
   @media screen and (min-width: 768px) {
     font-size: 12px;
     line-height: 1.16;
   }
 
-    &:hover {
-      color: var(--accent-color);
-      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover {
+    color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-    &:focus {
-      color: var(--accent-color);
-      outline: 1px solid var(--accent-color);
-      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+
+  &:focus {
+    color: var(--accent-color);
+    outline: 1px solid var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .page-header__link:focus .page-header__icon--tell {
@@ -156,7 +93,103 @@ z-index: 30;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.button__logo .icon-cross {
+  display: none;
+}
+.button__logo.is-hidden .icon-cross {
+  display: block;
+}
+.button__logo .icon-menu {
+  display: block;
+}
+.button__logo.is-hidden .icon-menu {
+  display: none;
+}
+
+
+.page-header__link--mail {
+  @media screen and (max-width: 767px) {
+  font-size: 24px;
+  line-height: 1.166;
+}
+}
+
+.page-header__link--tell {
+  @media screen and (max-width: 767px) {
+  font-size: 34px;
+  line-height: 1.176;
+  padding-bottom: 32px;
+}
+}
+
+.page-header__list {
+  @media screen and (max-width: 767px) {
+  display: block;
+  text-align: left;
+  }
+  display: flex;
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  text-decoration: none;
+}
+
+
+.page-header__item--nav:not(:last-child) {
+@media screen and (max-width: 767px) {
+    margin-bottom: 32px;
+}
+@media screen and (min-width: 768px) {
+  margin-left: 0;
+  margin-right: 50px;
+}
+}
+
+.page-header__item--contact:not(:last-child) {
+@media screen and (max-width: 767px) {
+  font-size: 34px;
+  line-height: 40px;
+  margin-bottom: 1.17;
+  padding-bottom: 32px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  margin-left: 0;
+  margin-right: 50px;
+}
+
+}
+.position {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.page-header__menu {
+@media screen and (max-width: 767px){
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+background-color: #ffffff;
+text-align: center;
+display: block;
+z-index: 30;
+}
+@media screen and (min-width: 768px) {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+}
+
 .page-header__list--nav {
+@media screen and (max-width: 767px) {
+  padding: 48px 0 302px 40px;
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   margin-left: 88px;
   }
@@ -168,6 +201,9 @@ z-index: 30;
 
 .page-header__list--contact {
   position: relative;
+@media screen and (max-width: 767px) {
+  display: none;
+}
 @media screen and (min-width: 768px)and(max-width: 1199px) {
   display: block;
   padding-top: 21px;
@@ -175,6 +211,13 @@ z-index: 30;
   }
 @media screen and (min-width: 1200px) {
   margin-left: 305px;
+  }
+}
+
+.page-header__list--mobile {
+  padding: 0 0 64px 40px;
+  @media screen and (min-width: 768px) {
+    display: none;
   }
 }
 
@@ -203,7 +246,6 @@ z-index: 30;
   display: none;
 }
 @media screen and (min-width: 768px) {
-
   width: 16px;
   height: 12px;
   margin-right: 10px;
@@ -211,7 +253,7 @@ z-index: 30;
 }
 
 .page-header__icon--tell {
-  @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   display: none;
 }
 @media screen and (min-width: 768px) {
@@ -221,10 +263,7 @@ z-index: 30;
 }
 }
 
-
 .page-header__item {
-  // display: flex;
-  // align-items: center;
   color: var(--background-color-wan);
   justify-content: space-evenly;
   fill: var(--text-color);
@@ -268,3 +307,34 @@ z-index: 30;
       }
 }
 
+.page-header__list-social {
+  font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+
+    display: flex;
+    padding-left: 40px;
+    padding-bottom: 48px;
+
+
+  @media screen and (min-width:768px){
+  display: none;
+}
+}
+
+.page-header__item-social {
+  padding-right: 10px;
+}
+
+.social-border {
+  color: #2196F3;
+  text-decoration: none;
+}
+
+.page-header__item-social:nth-last-child(n+2) .social-border{
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
