--- a/sass/components/_hero__section.scss
+++ b/sass/components/_hero__section.scss
@@ -6,26 +6,41 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image: linear-gradient(to right,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)),
-    url("../images/fon.jpg");
   display: flex;
   align-items: center;
   text-align: center;
   position: relative;
-
-  @media screen and (min-width: 480px) {
-      width: 480px;
-    }
-  
-    @media screen and (min-width: 768px) {
-      width: 768px;
-    }
   
     @media screen and (min-width: 1200px) {
-    min-width: 1200px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url("/images/laptop/heder-img.jpg");
+      @media(min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url("/images/laptop/heder-img@2x.jpg");
     }
+  }
+  @media screen and (max-width: 1199px) {
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  url("/images/tablet/Header-img.jpg");
+    @media(min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("/images/tablet/Header-img@X2.jpg");
+    }
+  }
+  @media screen and (max-width: 767px) {
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  url("/images/mobile/Header-img.jpg");
+    @media(min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("/images/mobile/Header-img@X2.jpg");
+    }
+  }
 }
 
 .hero__title {
