--- a/css/styles.css
+++ b/css/styles.css
@@ -457,19 +457,19 @@ summary {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button__logo .icon-cross {
+.page-header__menu .icon-cross {
   display: none;
 }
 
-.button__logo.is-hidden .icon-cross {
+.page-header__menu.is-hidden .icon-cross {
   display: block;
 }
 
-.button__logo .icon-menu {
+.page-header__menu .icon-menu {
   display: block;
 }
 
-.button__logo.is-hidden .icon-menu {
+.page-header__menu.is-hidden .icon-menu {
   display: none;
 }
 
