--- a/css/styles.css
+++ b/css/styles.css
@@ -473,6 +473,16 @@ summary {
   display: none;
 }
 
+.menuwka.is-hidden .skrut {
+  display: block;
+  color: blue;
+}
+
+.menuwka .skrut {
+  display: block;
+  color: red;
+}
+
 .button__logo:hover:focus .icon-menu {
   fill: #2196F3;
 }
