--- a/sass/components/_hero__section.scss
+++ b/sass/components/_hero__section.scss
@@ -13,32 +13,32 @@
   
     @media screen and (min-width: 1200px) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url("/images/laptop/heder-img.jpg");
+    url("../images/laptop/header-img.jpg");
       @media(min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("/images/laptop/heder-img@2x.jpg");
+        url("../images/laptop/header-img@x2.jpg");
     }
   }
   @media screen and (max-width: 1199px) {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-  url("/images/tablet/Header-img.jpg");
+  url("../images/tablet/Header-img.jpg");
     @media(min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url("/images/tablet/Header-img@X2.jpg");
+      url("../images/tablet/Header-img@X2.jpg");
     }
   }
   @media screen and (max-width: 767px) {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-  url("/images/mobile/Header-img.jpg");
+  url("../images/mobile/Header-img.jpg");
     @media(min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url("/images/mobile/Header-img@X2.jpg");
+      url("../images/mobile/Header-img@X2.jpg");
     }
   }
 }
