--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -132,3 +132,17 @@
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
+
+
+.knopka {
+  background-color: aqua;
+}
+
+.menuwka .is-hidden {
+  display: flex;
+background-color: bisque;
+}
+
+.menuwka {
+  display: none;
+}
